[package]
name = "github-changelist"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/github-changelist"
documentation = "https://docs.rs/github-changelist"
description = "Get the list of merged PRs on GitHub since the last release"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]


[dependencies]
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.32"
async-std = { version = "1.6.4", features = ["attributes"] }
chrono = "0.4.18"
surf = "2.0.0-alpha.5"
github_auth = "0.8.0"
structopt = "0.3.18"

[dev-dependencies]
